--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -11,6 +11,8 @@
   "cancel": "Cancel",
   "causeOfDeathInputLabel": "Cause of death",
   "clientRegistryEmpty": "Create & Post Patient",
+  "clientRegistryError": "Error occurred while reaching the client registry",
+  "clientRegistryErrorSubtitle": "Please proceed with registration contact system admin and  try again later",
   "clientVerificationWithClientRegistry": "Client verification with client registry",
   "closeOverlay": "Close overlay",
   "codedPersonAttributeAnswerSetEmpty": "The coded person attribute field '{{codedPersonAttributeFieldId}}' has been defined with an answer concept set UUID '{{answerConceptSetUuid}}' that does not have any concept answers.",
@@ -22,7 +24,9 @@
   "confirmDiscardChangesTitle": "Are you sure you want to discard these changes?",
   "confirmIdentifierDeletionText": "Are you sure you want to remove this identifier?",
   "contactSection": "Contact Details",
+  "continue": "Continue",
   "createNewPatient": "Create new patient",
+  "dateOfBirth": "Date of birth",
   "dateOfBirthLabelText": "Date of birth",
   "deathCauseRequired": "Cause of death is required",
   "deathDateInFuture": "Death date cannot be in future",
@@ -51,6 +55,7 @@
   "editIdentifierTooltip": "Edit",
   "editPatientDetails": "Edit patient details",
   "editPatientDetailsBreadcrumb": "Edit patient details",
+  "enterIdentifierSearchValue": "Enter identifier search value",
   "enterNonCodedCauseOfDeath": "Enter non-coded cause of death",
   "error": "Error",
   "errorFetchingCodedCausesOfDeath": "Error fetching coded causes of death",
@@ -83,11 +88,9 @@
   "male": "Male",
   "maritalStatus": "Marital status",
   "middleNameLabelText": "Middle Name",
+  "nationalId": "National ID",
   "negativeMonths": "Estimated months cannot be negative",
   "negativeYears": "Estimated years cannot be negative",
-  "months": "Months",
-  "nascopNumber": "Nascop facility no",
-  "nationalId": "National ID",
   "no": "No",
   "nonCodedCauseOfDeath": "Non-coded cause of death",
   "nonCodedCauseOfDeathRequired": "Cause of death is required",
@@ -109,6 +112,8 @@
   "patientRegistrationBreadcrumb": "Patient Registration",
   "patientVerificationFromHIE": "Patient verification from HIE",
   "postToRegistry": "Post to registry",
+  "refreshOrContactAdmin": "Try refreshing the page or contact your system administrator",
+  "registerPatient": "Register patient",
   "registerPatientSuccessSnackbarSubtitle": "The patient can now be found by searching for them using their name or ID number",
   "registerPatientSuccessSnackbarTitle": "New Patient Created",
   "registrationErrorSnackbarTitle": "Patient Registration Failed",
@@ -143,9 +148,9 @@
   "updatePatientErrorSnackbarTitle": "Patient Details Update Failed",
   "updatePatientSuccessSnackbarSubtitle": "The patient's information has been successfully updated",
   "updatePatientSuccessSnackbarTitle": "Patient Details Updated",
-  "yearsEstimateRequired": "Estimated years required",
   "useValues": "Use values",
   "validate": "Validate",
-  "years": "Years",
+  "viewFullResponse": "View full response",
+  "yearsEstimateRequired": "Estimated years required",
   "yes": "Yes"
 }
