(chore) : update fork with community latest changes

--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -10,6 +10,10 @@
   "birthFieldLabelText": "Birth",
   "cancel": "Cancel",
   "causeOfDeathInputLabel": "Cause of death",
+  "clientRegistryEmpty": "Create & Post Patient",
+  "clientRegistryError": "Error occurred while reaching the client registry",
+  "clientRegistryErrorSubtitle": "Please proceed with registration contact system admin and  try again later",
+  "clientVerificationWithClientRegistry": "Client verification with client registry",
   "closeOverlay": "Close overlay",
   "codedPersonAttributeAnswerSetEmpty": "The coded person attribute field '{{codedPersonAttributeFieldId}}' has been defined with an answer concept set UUID '{{answerConceptSetUuid}}' that does not have any concept answers.",
   "codedPersonAttributeAnswerSetInvalid": "The coded person attribute field '{{codedPersonAttributeFieldId}}' has been defined with an invalid answer concept set UUID '{{answerConceptSetUuid}}'.",
@@ -20,7 +24,9 @@
   "confirmDiscardChangesTitle": "Are you sure you want to discard these changes?",
   "confirmIdentifierDeletionText": "Are you sure you want to remove this identifier?",
   "contactSection": "Contact Details",
+  "continue": "Continue",
   "createNewPatient": "Create new patient",
+  "dateOfBirth": "Date of birth",
   "dateOfBirthLabelText": "Date of birth",
   "deathCauseRequired": "Cause of death is required",
   "deathDateInFuture": "Death date cannot be in future",
@@ -29,12 +35,6 @@
   "deathdayInvalidDate": "Death date and time cannot be before the birthday",
   "deathdayIsRequired": "Death date is required when the patient is marked as deceased.",
   "deathdayNotInTheFuture": "",
-  "cityVillage": "City",
-  "clientRegistryEmpty": "Create & Post Patient",
-  "clientVerificationWithClientRegistry": "Client verification with client registry",
-  "continue": "Continue",
-  "createNewPatient": "Create new patient",
-  "dateOfBirth": "Date of birth",
   "deathSection": "Death Info",
   "deathTimeFormatInvalid": "Time format is invalid",
   "deathTimeFormatRequired": "Time format is required",
@@ -51,6 +51,7 @@
   "editIdentifierTooltip": "Edit",
   "editPatientDetails": "Edit patient details",
   "editPatientDetailsBreadcrumb": "Edit patient details",
+  "enterIdentifierSearchValue": "Enter identifier search value",
   "enterNonCodedCauseOfDeath": "Enter non-coded cause of death",
   "error": "Error",
   "errorFetchingCodedCausesOfDeath": "Error fetching coded causes of death",
@@ -83,11 +84,9 @@
   "male": "Male",
   "maritalStatus": "Marital status",
   "middleNameLabelText": "Middle Name",
+  "nationalId": "National ID",
   "negativeMonths": "Estimated months cannot be negative",
   "negativeYears": "Estimated years cannot be negative",
-  "months": "Months",
-  "nascopNumber": "Nascop facility no",
-  "nationalId": "National ID",
   "no": "No",
   "nonCodedCauseOfDeath": "Non-coded cause of death",
   "nonCodedCauseOfDeathRequired": "Cause of death is required",
@@ -100,13 +99,12 @@
   "patientDetailsFound": "Patient information found in the registry, do you want to use the information to continue with registration?",
   "patientName": "Patient name",
   "patientNameKnown": "Patient's Name is Known?",
-  "patientRegistrationBreadcrumb": "Patient Registration",
-  "refreshOrContactAdmin": "Try refreshing the page or contact your system administrator",
-  "registerPatient": "Register patient",
   "patientNotFound": "The patient records could not be found in Client registry, do you want to continue to create and post patient to registry",
   "patientRegistrationBreadcrumb": "Patient Registration",
   "patientVerificationFromHIE": "Patient verification from HIE",
   "postToRegistry": "Post to registry",
+  "refreshOrContactAdmin": "Try refreshing the page or contact your system administrator",
+  "registerPatient": "Register patient",
   "registerPatientSuccessSnackbarSubtitle": "The patient can now be found by searching for them using their name or ID number",
   "registerPatientSuccessSnackbarTitle": "New Patient Created",
   "registrationErrorSnackbarTitle": "Patient Registration Failed",
@@ -142,9 +140,9 @@
   "updatePatientErrorSnackbarTitle": "Patient Details Update Failed",
   "updatePatientSuccessSnackbarSubtitle": "The patient's information has been successfully updated",
   "updatePatientSuccessSnackbarTitle": "Patient Details Updated",
-  "yearsEstimateRequired": "Estimated years required",
   "useValues": "Use values",
   "validate": "Validate",
-  "years": "Years",
+  "viewFullResponse": "View full response",
+  "yearsEstimateRequired": "Estimated years required",
   "yes": "Yes"
 }
