(feat) Add text-to-speech voice call support for ticket numbers in queue screen (#48)
* (Feat) Added Text-to-speech voice call for ticket numbers in service queues

* renamed tickets to be called variable

* effected reviews and comments to optimize code

* handled error message in a better way

* fixed test error

* memoized rowData

* set speech language based on translation language

---------

Co-authored-by: felix <fkiprotich845@gmail.com>
Co-authored-by: Felix Kiprotich <72152368+FelixKiprotich350@users.noreply.github.com>

--- a/packages/esm-service-queues-app/translations/en.json
+++ b/packages/esm-service-queues-app/translations/en.json
@@ -159,6 +159,7 @@
   "queueRoomUpdatedSuccessfully": "Queue room updated successfully",
   "queuesClearedSuccessfully": "Queues cleared successfully",
   "queueScreen": "Queue screen",
+  "queueScreenError": "Queue screen error",
   "queueService": "Queue service",
   "queueServiceCreated": "Queue service created",
   "queueServiceCreatedSuccessfully": "Queue service created successfully",
@@ -199,6 +200,7 @@
   "submitting": "Submitting...",
   "success": "Success",
   "temperature": "Temperature",
+  "ticketAnnouncement": "Ticket number: {{prefix}}, - {{suffix}}, please proceed to room {{room}}",
   "ticketNumber": "Ticket Number",
   "time": "Time",
   "timeCannotBeInFuture": "Time cannot be in the future",
