(feat) : Switch to using `kenyaemr` custom endpoint to fetch patient from HIE

--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -35,10 +35,6 @@
   "deathdayInvalidDate": "Death date and time cannot be before the birthday",
   "deathdayIsRequired": "Death date is required when the patient is marked as deceased.",
   "deathdayNotInTheFuture": "",
-  "cityVillage": "City",
-  "continue": "Continue",
-  "createNewPatient": "Create new patient",
-  "dateOfBirth": "Date of birth",
   "deathSection": "Death Info",
   "deathTimeFormatInvalid": "Time format is invalid",
   "deathTimeFormatRequired": "Time format is required",
@@ -100,14 +96,10 @@
   "obsFieldUnknownDatatype": "Concept for obs field '{{fieldDefinitionId}}' has unknown datatype '{{datatypeName}}'",
   "optional": "optional",
   "optionalIdentifierLabel": "{{identifierName}} (optional)",
-  "originFacilityCode": "Origin facility code",
-  "originFacilityName": "Origin facility name",
   "other": "Other",
   "patientDetailsFound": "Patient information found in the registry, do you want to use the information to continue with registration?",
   "patientName": "Patient name",
   "patientNameKnown": "Patient's Name is Known?",
-  "refreshOrContactAdmin": "Try refreshing the page or contact your system administrator",
-  "registerPatient": "Register patient",
   "patientNotFound": "The patient records could not be found in Client registry, do you want to continue to create and post patient to registry",
   "patientRegistrationBreadcrumb": "Patient Registration",
   "patientVerificationFromHIE": "Patient verification from HIE",
@@ -131,7 +123,9 @@
   "searchAddress": "Search address",
   "searchClientRegistry": "Search client registry",
   "searchIdentifierPlaceholder": "Search identifier",
+  "searchingRegistry": "Searching registry...",
   "searchLocationPersonAttribute": "Search location",
+  "searchRegistry": "Search registry",
   "selectAnOption": "Select an option",
   "selectCountry": "Select country",
   "selectIdentifierType": "Select identifier type",
