--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -74,6 +74,7 @@
   "givenNameRequired": "Given name is required",
   "healthID": "HealthID",
   "hieModal": "HIE Patient Record Found",
+  "hiePatientVerification": "HIE Patient Verification",
   "identifierSearch": "Identifier search",
   "identifierType": "Identifier type",
   "identifierValueRequired": "Identifier value is required",
@@ -101,12 +102,15 @@
   "optional": "optional",
   "optionalIdentifierLabel": "{{identifierName}} (optional)",
   "other": "Other",
+  "otpCode": "OTP Authorization code",
   "patientDetailsFound": "Patient information found in the registry, do you want to use the information to continue with registration?",
   "patientName": "Patient name",
   "patientNameKnown": "Patient's Name is Known?",
   "patientNotFound": "The patient records could not be found in Client registry, do you want to continue to create and post patient to registry",
+  "patientPhoneNUmber": "Patient Phone number",
   "patientRegistrationBreadcrumb": "Patient Registration",
   "patientVerificationFromHIE": "Patient verification from HIE",
+  "phoneNumberHelper": "Patient will receive OTP on this number",
   "postToRegistry": "Post to registry",
   "refreshOrContactAdmin": "Try refreshing the page or contact your system administrator",
   "registerPatient": "Register patient",
@@ -124,6 +128,7 @@
   "removeIdentifierButton": "Remove identifier",
   "resetIdentifierTooltip": "Reset",
   "restoreRelationshipActionButton": "Undo",
+  "retry": "Retry",
   "searchAddress": "Search address",
   "searchClientRegistry": "Search client registry",
   "searchIdentifierPlaceholder": "Search identifier",
@@ -149,6 +154,8 @@
   "updatePatientSuccessSnackbarTitle": "Patient Details Updated",
   "useValues": "Use values",
   "validate": "Validate",
+  "verifyAndUseValues": "Verify & Use values",
+  "verifyOTP": "Verify with OTP",
   "viewFullResponse": "View full response",
   "yearsEstimateRequired": "Estimated years required",
   "yes": "Yes"
