(fix) fixed a bug on the error handling of the confirm modal

--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -24,6 +24,7 @@
   "confirmDiscardChangesBody": "Your unsaved changes will be lost if you proceed to discard the form",
   "confirmDiscardChangesTitle": "Are you sure you want to discard these changes?",
   "confirmIdentifierDeletionText": "Are you sure you want to remove this identifier?",
+  "contactAdmin": "Please contact the administrator.",
   "contactSection": "Contact Details",
   "continue": "Continue",
   "createNewPatient": "Create new patient",
@@ -59,6 +60,7 @@
   "errorFetchingCodedCausesOfDeath": "Error fetching coded causes of death",
   "errorFetchingOrderedFields": "Error occured fetching ordered fields for address hierarchy",
   "errorFetchingPatient": "Error fetching patient",
+  "errorOccurred": " There was an error processing the request. Try again later",
   "estimatedAgeInMonthsLabelText": "Estimated age in months",
   "estimatedAgeInYearsLabelText": "Estimated age in years",
   "familyNameLabelText": "Family Name",
@@ -145,6 +147,7 @@
   "timeFormat": "Time Format",
   "timeOfDeathInputLabel": "Time of death (hh:mm)",
   "unableToFetch": "Unable to fetch person attribute type - {{personattributetype}}",
+  "unexpectedResponse": "Unexpected Response",
   "unknown": "Unknown",
   "unknownPatientAttributeType": "Patient attribute type has unknown format {{personAttributeTypeFormat}}",
   "unknownRelationship": "Unknown",
