--- a/packages/esm-patient-registration-app/translations/en.json
+++ b/packages/esm-patient-registration-app/translations/en.json
@@ -12,6 +12,7 @@
   "cancel": "Cancel",
   "causeOfDeathInputLabel": "Cause of death",
   "clientRegistryEmpty": "Create & Post Patient",
+  "clientRegistryEmptys": "Create Patient",
   "clientRegistryError": "Error occurred while reaching the client registry",
   "clientRegistryErrorSubtitle": "Please proceed with registration contact system admin and  try again later",
   "clientVerificationWithClientRegistry": "Client verification with client registry",
@@ -109,6 +110,7 @@
   "patientName": "Patient name",
   "patientNameKnown": "Patient's Name is Known?",
   "patientNotFound": "The patient records could not be found in Client registry, do you want to continue to create and post patient to registry",
+  "patientNotFounds": "The patient records could not be found in the client registry, proceed to create patient or try again.",
   "patientPhoneNUmber": "Patient Phone number",
   "patientRegistrationBreadcrumb": "Patient Registration",
   "patientVerificationFromHIE": "Patient verification from HIE",
