--- a/packages/esm-patient-search-app/translations/en.json
+++ b/packages/esm-patient-search-app/translations/en.json
@@ -43,7 +43,7 @@
   "searchResultsCount_other": "{{count}} search results",
   "selectOption": "Select an option",
   "sex": "Sex",
-  "trySearchFromClientRegistry": "Try searching using the patient's unique ID number or search the external registry",
+  "trySearchFromClientRegistry": "Try searching using the patient's unique ID number or search the HIE Registry",
   "trySearchWithPatientUniqueID": "Try to search again using the patient's unique ID number",
   "unknown": "Unknown",
   "unsupportedAttributeFormat": "Unsupported attribute format: {{format}}",
