(feat) : disable requirement for having SHA after patient search

--- a/packages/esm-patient-search-app/translations/en.json
+++ b/packages/esm-patient-search-app/translations/en.json
@@ -2,13 +2,16 @@
   "age": "Age",
   "any": "Any",
   "apply": "Apply",
+  "cancel": "Cancel",
   "clear": "Clear",
   "clearSearch": "Clear",
   "closeSearch": "Close Search Panel",
+  "continueToChart": "Continue to Chart",
   "countOfFiltersApplied_one": "{{count}} filters applied",
   "countOfFiltersApplied_other": "{{count}} filters applied",
-  "createPatientRecord": "Create Patient Record",
   "dayOfBirth": "Day of Birth",
+  "differencesFound": "Differences found",
+  "differencesFoundSubtitle": "The patient information in our system differs from the HIE record. Please review these differences before proceeding with the sync operation.",
   "error": "Error",
   "errorCopy": "Sorry, there was a an error. You can try to reload this page, or contact the site administrator and quote the error code above.",
   "errorFetchingPatients": "Error fetching patients",
@@ -17,14 +20,36 @@
   "errorLoadingConceptAttributeAnswers": "Error loading concept attribute answers",
   "errorLoadingLocationsForAttribute": "Error loading locations for person attribute {{attributeName}}",
   "errorUpdatingRecentlyViewedPatients": "Error updating recently viewed patients",
+  "faulureVerifyingPatient": "Verification failed. Patient missing phone number.Kindly advice patient to Update their details on Afya Yangu and try again",
   "female": "Female",
   "filtersAppliedText": "search queries added",
+  "hie": "HIE",
+  "hieErrorSubtitle": "Error while fetching patient information from HIE",
+  "hieErrorTitle": "HIE Patient Information Error",
+  "hiePatient": "HIE Patient",
+  "hiePatientNotFoundSubtitle": "Please check the identifier and try again, in the event that the patient is not found, please advice the patient to register with Social Health Authority (SHA)",
+  "hiePatientNotFoundTitle": "HIE Patient Information Not Found",
+  "invalidOtp": "Invalid OTP. Please check and try again.",
+  "localPatient": "Local Patient",
   "male": "Male",
   "monthOfBirth": "Month of Birth",
-  "mpi": "MPI",
   "nextPage": "Next page",
+  "noDependentsFoundMessage": "Sorry, no dependents were found",
   "noPatientChartsFoundMessage": "Sorry, no patient charts were found",
   "other": "Other",
+  "otp": "OTP",
+  "otpSendFailed": "Failed to send OTP",
+  "otpSendFailedSubtitle": "Please check your phone for the OTP",
+  "otpSent": "OTP Sent",
+  "otpSentSubtitle": "Please check your phone for the OTP",
+  "otpVerification": "OTP Verification",
+  "patientInformationSync": "Patient Information Sync",
+  "patientSaveFailed": "Failed to save patient",
+  "patientSaveFailedSubtitle": "",
+  "patientUpdated": "Patient Updated",
+  "patientUpdatedSubtitle": "Patient has been successfully updated",
+  "phoneNumber": "Phone Number",
+  "phoneNumberInvalid": "Please enter a valid phone number",
   "postcode": "Postcode",
   "previousPage": "Previous page",
   "recentSearchResultsCount_one": "{{count}} recent search result",
@@ -32,7 +57,11 @@
   "refineSearch": "Refine search",
   "refineSearchHeaderText": "Add additional search criteria",
   "refineSearchTabletBannerText": "Can't find who you're looking for?",
+  "registerDependentsWithSHA": "Register dependents with SHA to search for them",
+  "requestOtp": "Request OTP",
+  "resendOtp": "Resend OTP",
   "resetFields": "Reset fields",
+  "saving": "Saving...",
   "search": "Search",
   "searchForPatient": "Search for a patient by name or identifier number",
   "searchingText": "Searching...",
@@ -41,8 +70,11 @@
   "searchResults": "Search results",
   "searchResultsCount_one": "{{count}} search result",
   "searchResultsCount_other": "{{count}} search results",
+  "selectIdentifierTypeHelperText": "Select an identifier type to perform HIE Registry search",
   "selectOption": "Select an option",
+  "sending": "Sending...",
   "sex": "Sex",
+  "syncAndContinueToChart": "Sync and Continue to Chart",
   "trySearchFromClientRegistry": "Try searching using the patient's unique ID number or search the HIE Registry",
   "trySearchWithPatientUniqueID": "Try to search again using the patient's unique ID number",
   "unknown": "Unknown",
