Rename visit gender column header to sex

--- a/packages/esm-active-visits-app/translations/en.json
+++ b/packages/esm-active-visits-app/translations/en.json
@@ -33,5 +33,6 @@
   "totalVisits": "Total Visits Today",
   "visitStartTime": "Visit Time",
   "visitSummary": "Visit Summary",
-  "visitType": "Visit Type"
+  "visitType": "Visit Type",
+  "sex": "Sex"
 }
