(feat) Add proceed to chart without sync

--- a/packages/esm-patient-search-app/translations/en.json
+++ b/packages/esm-patient-search-app/translations/en.json
@@ -11,7 +11,7 @@
   "countOfFiltersApplied_other": "{{count}} filters applied",
   "dayOfBirth": "Day of Birth",
   "differencesFound": "Differences found",
-  "differencesFoundSubtitle": "The patient information in our system differs from the HIE record. Please review these differences before proceeding with the sync operation.",
+  "differencesFoundSubtitle": "The patient information in our system differs from the HIE record. Please review these differences before proceeding, if you proceed with the sync operation, the patient information in our system will be updated to match the HIE record. If you choose to Proceed to patient chart, you will be redirected to the patient chart. We will not proceed with the sync operation.",
   "error": "Error",
   "errorCopy": "Sorry, there was a an error. You can try to reload this page, or contact the site administrator and quote the error code above.",
   "errorFetchingPatients": "Error fetching patients",
@@ -52,6 +52,7 @@
   "phoneNumberInvalid": "Please enter a valid phone number",
   "postcode": "Postcode",
   "previousPage": "Previous page",
+  "proceedToPatientChart": "Proceed to patient chart",
   "recentSearchResultsCount_one": "{{count}} recent search result",
   "recentSearchResultsCount_other": "{{count}} recent search results",
   "refineSearch": "Refine search",
